# fcrypt

./: .clang-format  .gitignore  CMakeLists.txt  README.md
dependencies/libprogress/: progress.c  progress.h
dependencies/minilua/: lua.c
patches/: libressl-fix-mingw-asm.patch
src/: cmake-generated.h.in  common.h  crypto-decrypt.c  crypto-encrypt.c  crypto.h  decrypt.c  decrypt.h  encrypt.c  encrypt.h  key-derivation.c  key-derivation.h  main.c  parse-args.c  parse-args.h
tests/: block_size_align.lua  encrypt.lua  setup.lua  util.lua  zero.lua
